<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OptionsActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_preferences"
    android:isScrollContainer="true"
    android:scrollbars="horizontal">



        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
            android:paddingTop="35dp">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/energy_charge"
            />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/electric_fee_example"
            android:inputType="numberDecimal"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/usage_fee_per_kwh_edit_text" />



    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/basic_charge"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/electric_fee_example"
            android:inputType="numberDecimal"
            android:id="@+id/basic_charge_fee_edit_text" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/others_fee" />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/electric_fee_example"
            android:inputType="numberDecimal"
            android:id="@+id/other_fee_edit_text" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Carpet Area (Sq.ft)" />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="985"
            android:inputType="numberDecimal"
            android:id="@+id/Carpet_area_edit_text" />


    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/no_room" />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_room_example"
            android:inputType="numberDecimal"
            android:id="@+id/no_room_edit_text" />


    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_marginTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/no_family" />

        <EditText
            android:layout_marginBottom="10dip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_people_example"
            android:inputType="numberDecimal"
            android:id="@+id/no_people_edit_text" />


    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/currency_options"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <com.example.smartliving.SearchableSpinner
                android:id="@+id/currencyOptionsSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge" />


        </LinearLayout>



</LinearLayout>
</ScrollView>
