<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="60dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/mainlayout"
    >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="ExtraText">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Total Consumption"
                android:textStyle="bold"

                />


            <TextView
                android:id="@+id/totalElectricFeeTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electric_fee_example" />


            <TextView
                android:id="@+id/totalElectricUsageTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/electric_usage_example" />
            <TextView
                android:id="@+id/totalCO2TextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Total CO2 Emission:"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/totalCO2emissionTextView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:text="0.0Kg"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <LinearLayout
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/days"
                android:textStyle="bold"

                />

            <EditText
                android:inputType="none"
                android:ems="2"
                android:id="@+id/daysEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:focusable="false"
                />


        </LinearLayout>


    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:paddingBottom="0dip"
        android:paddingTop="10dip"
        android:background="#151515"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:paddingBottom="0dip"
        android:paddingTop="10dip"
        android:background="#151515"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:paddingTop="10dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_gravity="center"
            android:text="@string/activity_per_day"
            android:textStyle="bold"
            android:paddingBottom="10dip"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <ImageButton
            android:layout_gravity="center"
            android:layout_margin="0dp"
            android:background="?attr/selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ButtonBar"
            android:id="@+id/addUsageButton"
            android:src="@android:drawable/ic_menu_add"

            android:contentDescription="@string/add_activity" />
    </LinearLayout>




    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:paddingBottom="0dip"
        android:paddingTop="10dip"
        android:background="#151515"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        >

        <ListView
            android:id="@+id/usageListView"
            android:layout_width="365dp"
            android:layout_height="454dp"
            android:divider="#b5b5b5"
            android:dividerHeight="1dp">

        </ListView>

        <Button
            android:id="@+id/recommendation_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_above="@+id/usageListView"
            android:layout_marginBottom="484dp"
            android:layout_gravity="center_horizontal|center"
            android:linksClickable="false"
            android:text="Your Recommendation" />

    </RelativeLayout>

</LinearLayout>

